# aquarium_fishes

./: LICENSE  README.rst  pyproject.toml
fishes/: __main__.py
tests/: test_fishes.py
