[tool.poetry]
name = "fishes"
version = "0.1.0"
description = "Spawns an aquarium from https://webglsamples.org/aquarium/aquarium.html in the browser"
authors = ["kosayoda <kieransiek@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
selenium = "^3.1"
webdriver-manager = "^1.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fishes = 'fishes.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
